--- a/frontend/src/components/GameDisplays/DashGameGallery/DashGameGallery.module.css
+++ b/frontend/src/components/GameDisplays/DashGameGallery/DashGameGallery.module.css
@@ -5,31 +5,32 @@
     padding: 40px;
     color: var(--text-bw);
     font-family: Arial, sans-serif;
-}
-    
+      opacity: 0.8;
+      background-size: 20px 20px;
+}    
 .gameContainer {
     flex-direction: column;
     text-align: center;
-    background: radial-gradient(60deg, var(--bg-dark), var(--bg-light));
-    border-radius: 8px;
+    background: radial-gradient(circle, var(--bg-light) 15%, var(--bg-dark) 100%);
+      transform: scale(1.05);    border-radius: 8px;
     padding: 15px;
     box-shadow: 0 0px 2px var(--text-primary);
     filter: brightness(1);
     position: relative;
     scale: .8;
     transition: all 0.25s ease-in-out;
+    box-shadow: 0px 10px 25px -15px var(--text-primary), 5px 22px 24px 5px rgba(0, 0, 0, 0);
+    border: 5px outset var(--bg-dark);
+    border-radius: 20px;
 }
     
 .gameContainer:nth-child(even) {
-  background: linear-gradient(115deg, var(--bg-dark), var(--bg-light));   
-  transform: scale(1.05);
   scale: .85;
 }
 
 .gameContainer:hover {
   transform: scale(1.075) translateY(-5px);
   filter: brightness(1.03);
-  box-shadow: 0 0px 2px var(--bg-accent);
 }
     
 .gallery img {
