--- a/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
+++ b/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
@@ -1,9 +1,9 @@
 .gameTableContainer {
   margin: 0 auto;
   padding: 20px;
-  background-color: var(--bg-dark);
+  background: linear-gradient(0deg, var(--bg-dark), var(--bg-primary));
   border-radius: 10px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   overflow-x: auto;
   min-height: 800px;
   max-width: 1200px;
@@ -12,15 +12,16 @@
   align-items: flex-start;
   padding-bottom: 50px;
   position: relative;
+  margin-bottom: 5%;
 }
 
 .controls {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
-  padding: 0 10px;
+  padding: 10px;
   order: -1;
+  width: fit-content;
 }
 
 .filters {
@@ -85,7 +86,7 @@
   border-radius: 10px;
   overflow: hidden;
   table-layout: fixed;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+  border: 3px dashed var(--text-primary);
 }
 
 .gameTable th,
