--- a/frontend/src/components/GameDisplays/OwnedGamesGallery/OwnedGamesGallery.module.css
+++ b/frontend/src/components/GameDisplays/OwnedGamesGallery/OwnedGamesGallery.module.css
@@ -3,8 +3,7 @@
   position: relative;
   width: 100%;
   padding: 20px 0;
-  background-color: var(--bg-dark);
-  border-radius: 15px;
+  background: linear-gradient(180deg, var(--bg-dark), var(--bg-primary));  border-radius: 15px;
   max-width: 1400px;
   padding-top: 2px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
