Last fixes and polish to SteamIdDisplay and Navbar

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -29,7 +29,7 @@
 }
 
 body {
-    padding:0;
+    padding-top: 5%;
     margin:0;
     background: radial-gradient(circle, var(--bg-light) 0%, var(--bg-dark) 90%);
     font-family: Arial, sans-serif;
