--- a/frontend/src/app/LoginRedirect/LoginRedirect.module.css
+++ b/frontend/src/app/LoginRedirect/LoginRedirect.module.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: var(--bg-light);
+        margin-top: -5%;
 }
 
 .navContainer {
