some small css fixes

--- a/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
+++ b/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   width: max-content;
   margin: 0 auto;
-  margin-top: 3.5%;
+  margin-top: 60px;
   scale: 1.10;
   padding: 25px 25px;
   padding-left: 40px;
