--- a/frontend/src/app/Friends/Friends.module.css
+++ b/frontend/src/app/Friends/Friends.module.css
@@ -1,10 +1,11 @@
 .container{
- display: grid;
- text-align: center;
- color: var(--text-primary);
- padding-bottom: 16px;
- gap: 8px;
- overflow: hidden;
+  display: grid;
+  text-align: center;
+  color: var(--text-primary);
+  padding-bottom: 16px;
+  gap: 8px;
+  overflow: hidden;
+  margin-top: 60px;
 }
 
 .pageTitle{
@@ -13,7 +14,6 @@
 }
 
 .list_of_friends {
-  
   display: grid;
   align-items: center;
   gap: 16px;
